--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.0.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "next": "^14.0.2",
+    "next-auth": "^5.0.0-beta.19",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
